<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/LogInActivitySucsess"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewLogInNameIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewLogIn"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="46dp"
        android:text="@string/LogInActivityNameIs"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewLogInNAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewLogInNameIs"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/textViewLogInNameIs"
        android:text="@string/LogInActivityNameTransfer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLogInNAME"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/LogInActivity_Button_back" />

</RelativeLayout>
