<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_registration_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="18dp"
        android:text="@string/Registration_user_name" />

    <EditText
        android:id="@+id/editText_registration_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_registration_user_name"
        android:layout_below="@+id/tv_registration_user_name"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_registration_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_registration_name"
        android:layout_below="@+id/editText_registration_name"
        android:layout_marginTop="10dp"
        android:text="@string/Registration_user_email" >
    </TextView>

    <EditText
        android:id="@+id/editText_registration_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_registration_email"
        android:layout_below="@+id/textView_registration_email"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView_registration_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_registration_email"
        android:layout_below="@+id/editText_registration_email"
        android:layout_marginTop="14dp"
        android:text="@string/Registration_user_password" >
    </TextView>

    <EditText
        android:id="@+id/editText_registration_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_registration_password"
        android:layout_below="@+id/textView_registration_password"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_registration_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_registration_password"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/Registration_Button_Ok" >
    </Button>

    <Button
        android:id="@+id/button_registration_cansel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_registration_ok"
        android:layout_alignBottom="@+id/button_registration_ok"
        android:layout_alignRight="@+id/editText_registration_password"
        android:text="@string/Registration_Button_Cansel" >
    </Button>

</RelativeLayout>